# weave

./: CMakeLists.txt  LICENSE  README.md
cmake/: Catch2.cmake  Catch2Utils.cmake  LibAsio.cmake  LibOpenCV.cmake  LibOpenSSL.cmake  Libcurl.cmake  RedisUtils.cmake  SpdlogUtils.cmake  extract_lib_curl.cmake  fetch_lib_curl.cmake
cmake/libcurl/: extract_lib_curl.cmake  fetch_lib_curl.cmake
docs/design/: oauth2.md
include/utils/: compile_time.tpp
include/weave/: curl_handler.hpp  curl_pool.hpp  weave_engine.hpp
include/weave/curl/: callbacks.hpp  error_handler.hpp
include/weave_ds/: const_expr_map.tpp
include/weave_net/: httpclient.hpp  websocket.hpp
include/weave_sockets/: tcp.hpp
include/weave_utils/: compile_time.tpp  coroutine_utils.tpp  functional.tpp  threadpool.hpp
src/weave/: curl_handler.cc  weave_engine.cc
src/weave/curl/: callbacks.cc  error_handler.cc
src/weave_net/: httpclient.cc  websocket.cc
tests/: 001-catch2_dep_test.cc  002-openssl_dep_test.cc  003-libcurl_dep_test.cc  004-hiredis_dep_test.cc  005-spdlog_dep_test.cc  006-http_uri_tests.cc  007-opencv_dep_test.cc  008-http-response-header-ct-test.cc  008-http_protocol_entity_tests.cc  009-singleton-contexts.cc  010-curlhandler-request-tests.cc  011-curl-post-headers.cc  011-curl-set-headers.cc  012-post-set-test-httpclient.cc  013-curlpool_test.cc  014-threadpool-test.cc  015-curlwebsocket.cc  CMakeLists.txt
tests/testserver/: server.py
tests/testwebsocket/: websocket.py
